src/test/deca/codegen/invalid/Objet/NoReturn-Asm.deca
// Description:
//      Class with an assembly int function without RTS at the end
//
// Result:
//      ERROR: no_return
//
// History:
//      created on 17/1/2022


class A {
    int x;

    int function()
    asm ( "LOAD #1, R0
" );
}


{
    A a = new A();
    int x = a.function();
}
